wasserfloh/etc/iptables/rules.v4
*nat
:PREROUTING ACCEPT [245:17145]
:INPUT ACCEPT [139:10573]
:OUTPUT ACCEPT [220:16033]
:POSTROUTING ACCEPT [220:16033]
:ffrl-nat - [0:0]
-A POSTROUTING -s 10.37.0.0/16 -o ffrl+ -j ffrl-nat
-A POSTROUTING -s 10.56.0.0/16 -o ffrl+ -j ffrl-nat
-A ffrl-nat -o ffrl+ -j SNAT --to-source 185.66.195.33
COMMIT
# Completed on Wed Feb 25 08:02:00 2015
# Generated by iptables-save v1.4.21 on Wed Feb 25 08:02:00 2015
*filter
:INPUT ACCEPT [44945:11496465]
:FORWARD ACCEPT [6267:4814991]
:OUTPUT ACCEPT [66940:25703499]
-A INPUT -d 136.243.184.91/32 -p 47 -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i mzBR ! -s 10.37.0.0/16 -j DROP
-A FORWARD -i wiBR ! -s 10.56.0.0/16 -j DROP
-A FORWARD -i wiBR -o ffrl+ -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i mzBR -o ffrl+ -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -s 136.243.184.91/32 -p 47 -j ACCEPT
-A OUTPUT -m conntrack --ctstate INVALID -j DROP
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Wed Feb 25 08:02:00 2015
# Generated by iptables-save v1.4.21 on Wed Feb 25 08:02:00 2015
*mangle
:PREROUTING ACCEPT [93619:23733829]
:INPUT ACCEPT [86366:18529198]
:FORWARD ACCEPT [7197:5202343]
:OUTPUT ACCEPT [128224:47759219]
:POSTROUTING ACCEPT [135421:52961562]
COMMIT
# Completed on Wed Feb 25 08:02:00 2015
