wasserfloh/etc/iptables/rules.v6
# Generated by ip6tables-save v1.4.21 on Mon May 16 11:10:49 2016
*filter
:INPUT ACCEPT [6222:853689]
:FORWARD ACCEPT [1:80]
:OUTPUT ACCEPT [8104:997983]
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i mzBR -o wiBR -j ACCEPT
-A FORWARD -i wiBR -o mzBR -j ACCEPT
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wiBR -o ffrl+ -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i mzBR -o ffrl+ -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i ffrl+ -o wiBR -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i ffrl+ -o mzBR -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -m conntrack --ctstate INVALID -j DROP
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Mon May 16 11:10:49 2016
# Generated by ip6tables-save v1.4.21 on Mon May 16 11:10:49 2016
*mangle
:PREROUTING ACCEPT [453204:109396577]
:INPUT ACCEPT [410888:106326136]
:FORWARD ACCEPT [31:2480]
:OUTPUT ACCEPT [958295:276458490]
:POSTROUTING ACCEPT [958350:276464940]
COMMIT
# Completed on Mon May 16 11:10:49 2016
# Generated by ip6tables-save v1.4.21 on Mon May 16 11:10:49 2016
*nat
:PREROUTING ACCEPT [1134:125594]
:INPUT ACCEPT [799:84385]
:OUTPUT ACCEPT [2084:213688]
:POSTROUTING ACCEPT [2085:213768]
COMMIT
# Completed on Mon May 16 11:10:49 2016
